--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,24 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats-server
+    image: stats_image
+    container_name: stats_container
     ports:
       - "9090:9090"
-
-  stats-db:
-    image: postgres:14-alpine
-
-  ewm-service:
-    ports:
-      - "8080:8080"
-
+    depends_on:
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/explore_with_me
+      - POSTGRES_DB=explore_with_me
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm_db
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=explore_with_me
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
