--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-      - ewm-db
+      - ewm-service
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/explore_with_me
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-service:5432/explore_with_me
       - POSTGRES_DB=explore_with_me
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=iamroot
   ewm-db:
     image: postgres:14-alpine
-    container_name: ewm_db
+    container_name: ewm-service
     ports:
       - "6541:5432"
     environment:
