--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - POSTGRES_DB=explore_with_me
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=iamroot
-  ewm-db:
+  ewm-service:
     image: postgres:14-alpine
     container_name: ewm-service
     ports:
