--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     container_name: stats_container
     ports:
       - "9090:9090"
+      - "9091:9091"
     depends_on:
       - ewm-service
     environment:
+      - STATS_SERVER_PORT=9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-service:5432/explore_with_me
       - POSTGRES_DB=explore_with_me
       - POSTGRES_USER=postgres
