--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,38 @@
 version: '3.1'
 services:
   stats-server:
-    build: ./stats-server
+    build: ./stats
     image: stats_image
-    container_name: stats_container
+    container_name: explore_stats_server
     ports:
       - "9090:9090"
       - "9091:9091"
     depends_on:
-      - ewm-service
+      - stats-db
     environment:
       - STATS_SERVER_PORT=9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-service:5432/explore_with_me
-      - POSTGRES_DB=explore_with_me
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
-  ewm-service:
+      - DB_HOST=explore_stats_db
+      - DB_PORT=5432
+      - DB_NAME=explore_stats
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+
+  stats-db:
     image: postgres:14-alpine
-    container_name: ewm-service
+    container_name: explore_stats_db
     ports:
       - "6541:5432"
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
     environment:
-      - POSTGRES_DB=explore_with_me
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=iamroot
+      - POSTGRES_DB=explore_stats
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+
+  ewm-service:
+    image: postgres:14-alpine
+    container_name: explore_emw_db
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=explore_emw
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
