--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "9090:9090"
       - "9091:9091"
     depends_on:
-      - stats-db
+      - ewm-service
     environment:
       - STATS_SERVER_PORT=9090
       - DB_HOST=explore_stats_db
@@ -17,22 +17,12 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
 
-  stats-db:
-    image: postgres:14-alpine
-    container_name: explore_stats_db
-    ports:
-      - "6541:5432"
-    environment:
-      - POSTGRES_DB=explore_stats
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-
   ewm-service:
     image: postgres:14-alpine
-    container_name: explore_emw_db
+    container_name: ewm-service
     ports:
       - "6542:5432"
     environment:
-      - POSTGRES_DB=explore_emw
+      - POSTGRES_DB=explore_with_me
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
