--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: ./stats
+    build: ./stats-server
     image: stats_image
     container_name: explore_stats_server
     ports:
