--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,33 @@
 version: '3.1'
 services:
   stats-server:
-    build: ./stats-server
-    image: stats_image
-    container_name: explore_stats_server
+    build: stats-server/stats-service
+    image: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
-      - "9091:9091"
     depends_on:
-      - ewm-service
+      - stats-db
     environment:
-      - STATS_SERVER_PORT=9090
-      - DB_HOST=explore_stats_db
-      - DB_PORT=5432
-      - DB_NAME=explore_stats
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/statsDB
+
+
+  stats-db:
+    image: postgres:14-alpine
+    container_name: stats-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=statsDB
+      - POSTGRES_USER=statsDB_user
+      - POSTGRES_PASSWORD=stats
+
 
   ewm-service:
-    image: postgres:14-alpine
-    container_name: ewm-service
+    build: main-service
+    image: main-service
+    container_name: main-service
     ports:
-      - "6542:5432"
-    environment:
-      - POSTGRES_DB=explore_with_me
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      - "8080:8080"
+    depends_on:
+      - stats-server
