--- a/stats-server/pom.xml
+++ b/stats-server/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>stats-server</artifactId>
     <packaging>pom</packaging>
     <modules>
+        <module>mapper</module>
         <module>stats-client</module>
         <module>stats-service</module>
     </modules>
