--- a/stats-server/stats-client/pom.xml
+++ b/stats-server/stats-client/pom.xml
@@ -34,10 +34,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stats-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>mapper</artifactId>
+            <version>${module.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
