--- a/stats-server/stats-service/pom.xml
+++ b/stats-server/stats-service/pom.xml
@@ -65,6 +65,13 @@
         </dependency>
 
         <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>mapper</artifactId>
+            <version>${module.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
