--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   stats-server:
-    build: stats-server/stats-service
+    build: stats-server/service
     image: stats-server
     container_name: stats-server
     ports:
